<resources>
    <string name="app_name">My Application</string>

    <string name="back4app_server_url">https://parseapi.back4app.com/</string>

    <!-- Change the following strings as required -->
    <string name="back4app_app_id">5r8ZBwqX5RM3Sf4UUrYxlJk25zM4Oj4qs8Sy13eM</string>
    <string name="back4app_client_key">DHCKTkNlwXsY3BLqUmkuMu1Qz0EkS2Obc20EHAdQ</string>
    <string name="pizza">Pizza</string>
    <string name="tacos">Tacos</string>
    <string name="donuts">Donuts</string>
    <string name="pie">Pie</string>
    <string name="onion_rings">Onion Rings</string>
    <string name="french_toast">French Toast</string>
    <string name="steak">Steak</string>
    <string name="bagels">Bagels</string>
    <string name="_59_99">$59.99</string>
    <string name="burger">Burger</string>
    <string name="toast">Toast</string>
    <string name="water">Water</string>
    <string name="wine">Wine</string>
    <string name="pancakes">Pancakes</string>
    <string name="fries">Fries</string>
    <string name="milkshake">Milkshake</string>
    <string name="pasta">Pasta</string>
    <string name="button">Button</string>
    <string name="games">Games</string>
    <string name="log_out">Log out</string>
    <string name="skip_tutorial">Skip Tutorial</string>
    <string name="ready">Ready?</string>
    <string name="title_activity_gamestart">Gamestart</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="title_activity_home">Home</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="name_of_menu">Name of Menu</string>
    <string name="title_activity_home_screen">MainActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="order">Order</string>
    <string name="restaurants">Restaurants</string>
    <string name="more">More</string>
    <string name="start_order">Start Order</string>
    <string name="create_accont">Create Accont</string>
    <string name="title_activity_customer_accont_home">MainActivity</string>


    //Selected Food Quantity Scroll Bar

    <string-array name="Number_of_Products">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
        <item>10</item>
    </string-array>

    //Selected Filter
    <string-array name="Filter">
        <item>Filter</item>
        <item>Diet</item>
        <item>Allergy</item>
        <item>None</item>
    </string-array>

    //Selected Diet
    <string-array name="Diet">
        <item>None</item>
        <item>Vegetarian</item>
    </string-array>

    //Selected Allergy
    <string-array name="Allergy">
        <item>None</item>
        <item>Peanut</item>
<<<<<<< Updated upstream
=======
        <item>Dairy</item>
>>>>>>> Stashed changes
    </string-array>
    //Selected ingredients not to include

    <string-array name="Ingredients">
        <item>Tomatoes</item>
        <item>Cheese</item>
        <item>Pickles</item>
        <item>Lettuce</item>
        <item>Bread</item>
        <item>Onions</item>
        <item>Bread Bun</item>
    </string-array>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


</resources>